@@ -47,7 +47,7 @@
 
 
 /*****************************************************************************
- *  Static Prototypes
+ *  Private Prototypes
  *****************************************************************************/
 
 static int _fd_get_poll_timeout (const struct timeval *when);
@@ -58,7 +58,7 @@ static pid_t _fd_test_lock (int fd, int type);
 
 
 /*****************************************************************************
- *  Extern I/O Functions
+ *  Public Functions for I/O
  *****************************************************************************/
 
 ssize_t
@@ -367,7 +367,7 @@ fd_read_line (int fd, void *buf, size_t maxlen)
 
 
 /*****************************************************************************
- *  Extern Attribute Functions
+ *  Public Functions for Attributes
  *****************************************************************************/
 
 int
@@ -420,7 +420,7 @@ fd_is_nonblocking (int fd)
 
 
 /*****************************************************************************
- *  Extern Locking Functions
+ *  Public Functions for Locking
  *****************************************************************************/
 
 int
@@ -473,7 +473,7 @@ fd_is_write_lock_blocked (int fd)
 
 
 /*****************************************************************************
- *  Static Functions
+ *  Private Functions
  *****************************************************************************/
 
 static int
